--- a/doc/base/templates/layout.html
+++ b/doc/base/templates/layout.html
@@ -151,7 +151,7 @@
         <img class="background" src="{{ pathto('_static/seiscomp.png', 1) }}"/>
         <div class="content">
            <span class="title">{{ project }} {{ release }}</span>
-           <span class="version">{{ version }}</span></h1>
+           <span class="version">{{ version }}</span>
         </div>
       </div>
     </div>
