--- a/doc/base/templates/layout.html
+++ b/doc/base/templates/layout.html
@@ -148,10 +148,10 @@
   <body>
     <div class="header">
       <div class="container">
-        <img class="background" src="{{ pathto('_static/seiscomp.png', 1) }}"/>
-        <div class="content">
-           <span class="title">{{ project }} {{ release }}</span>
-           <span class="version">{{ version }}</span>
+        <div class="brand">
+          <img class="logo" src="{{ pathto('_static/seiscomp.svg', 1) }}"/>
+           <!-- span class="title">{{ project }} {{ release }}</span -->
+          <span class="version">{{ version }}</span>
         </div>
       </div>
     </div>
