--- a/doc/base/sass/seiscomp.scss
+++ b/doc/base/sass/seiscomp.scss
@@ -1,4 +1,5 @@
 @import "theme.scss";
+@import "font-roboto.scss";
 
 
 // ----------------------------------------------------------------------------
