[doc] Fix math image style

--- a/doc/base/sass/seiscomp.scss
+++ b/doc/base/sass/seiscomp.scss
@@ -300,6 +300,10 @@ img.align-center, .figure.align-center, object.align-center {
 	margin-right: auto;
 }
 
+img.math {
+	vertical-align: middle;
+}
+
 // ----------------------------------------------------------------------------
 // Monospace elements
 // ----------------------------------------------------------------------------
