[doc] Change default font-weight to normal and adapt release branch

--- a/doc/base/sass/theme.scss
+++ b/doc/base/sass/theme.scss
@@ -6,7 +6,7 @@ $fontDirectory: 'fonts/';
 $fontSize               : 11pt;
 
 $fontRegularFamily      : 'Roboto';
-$fontRegularWeight      : 300;
+$fontRegularWeight      : normal;
 
 $fontMonoFamily         : 'Roboto Mono', 'Courier New', monospace;
 $fontMonoWeight         : normal;
