--- a/doc/base/templates/layout.html
+++ b/doc/base/templates/layout.html
@@ -182,7 +182,7 @@
         </a>
         <div class="stretched align-center fitted content">
           <div>
-          Release <b>{{ release }}</b> version <b>{{ version }}</b>
+		  Version <b>{{ version }}</b> {{ release }}
           </div>
           {%- if show_copyright %}
             <div class="copyright">
