[doc] Add SeisComP logos in various styles and formats

--- a/doc/base/templates/layout.html
+++ b/doc/base/templates/layout.html
@@ -149,7 +149,7 @@
     <div class="header">
       <div class="container">
         <div class="brand">
-          <img class="logo" src="{{ pathto('_static/brands/seiscomp.svg', 1) }}"/>
+          <img class="logo" src="{{ pathto('_static/brands/seiscomp/text/white.svg', 1) }}"/>
            <!-- span class="title">{{ project }} {{ release }}</span -->
           <span class="version">{{ version }}</span>
         </div>
